  SYS_THRESHOLD_REARMED
- Added threshold processing option "Always process all thresholds"
- Added possibility to set confirmation messages for object tools
- Object tools "Shutdown system", "Restart system", "Restart agent"
  asks confirmation by default
- Windows console:
	- Console changed to use UNICODE internally
	- Event processing policy editor improved
- Server ported to AIX and HP-UX
- Agent ported to HP-UX
- Agent for AIX improved
- Fixed issues: #104, #109, #110, #111, #112, #115, #116


*
* 0.2.13
*

- Implemented central (stored on server) agent configs
- Agent ported to IPSO
- Added installer command line options for unattended installation of
  Windows agent
- New MIBs added: S5-ETH-MULTISEG-TOPOLOGY-MIB, BN-IF-EXTENSIONS-MIB
- Server startup and shutdown procedures improved
- Added detection of lost database connections and automatic reconnect
- Native operating system read/write locks used whenever possible
- Added possibility to use alarm message text in actions (if action executed by
  the same event processing rule as alarm)
- Better handling of interface names of Nortel ethernet switches
- SNMP trap varbinds now can be mapped to event parameters not only by OID,
  but also by position in trap PDU
- Windows binaries built against OpenSSL 0.9.8b
- Windows console:
	- DCI history data viewer improved
	- Graphs improved
- nxsnmpset utility improved
- nxevent: added -e command line option to turn on session encryption
- Implemented parameter UPS.Load for BCM/XCP compatible devices
- Fixed issues: #4, #20, #47, #67, #79, #80, #91, #92, #93, #94, #95, #96, #97,
                #98, #99, #100, #101, #102, #103


*
* 0.2.12
*

- Added possibility to define complicated conditions using "condition" objects
- Implemented RADIUS authentication for NetXMS users
- Added support for compressed MIB files
- New MIBs added: ENTITY-MIB
- Added support for DRBD device monitoring
- Windows console: Event editor improved
- UPS subagent: