@@ -12,6 +12,7 @@
 - Windows console:
 	- Console changed to use UNICODE internally
 	- Event processing policy editor improved
+	- Added confirmation for object deletion
 - Server ported to AIX and HP-UX
 - Agent ported to HP-UX
 - Agent for AIX improved
